# luffa-agentic-layer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  claude.md  debug_connection.py  pyproject.toml  requirements.txt  step1_echo.py  step2_vllm_bot.py  step3_owner.py  step4_safety.py
examples/: full_agent.py  minimal_echo.py  nanobot_adapter.py  two_agents_demo.py  vllm_agent.py
luffa_connector/: __init__.py  brains.py  channel.py  cli.py  connector.py  memory.py  owner.py  protocol.py  safety.py
luffa_discovery/: __init__.py  app.py  models.py  run.py  store.py
